force-app/main/default/objects/TASKRAY__trTaskGroup__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>