force-app/main/default/objects/TASKRAY__trTaskGroup__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TaskRay Task Groups (Vendor)</relationshipLabel>
    <relationshipName>TaskRay_Task_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>